--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -4,27 +4,27 @@
 	margin:0;padding:0;border:none
 }
 
+
 	html {font-family:Verdana, Geneva, sans-serif;color:#000;font-size:12px;cursor:default}
-	#topo {width:100%;height:150px;background:#FFF;border-bottom: 3px double #d6d6d6}
-	#topo .logo {float:left;margin:20px 0 0 20px}
-	#topo h1 {float:left;margin:60px 0 0 250px}
 	
 	/* Form */
-	
+	.error {font-size:14px;color:#990000}	
 	.text, .submit {background:none;border:1px solid #C1C2C8;padding:5px;width:300px;border-radius:5px;font-size:18px;color:#868589;float:left;clear:both;margin:5px 0 5px 0}
 	.submit {width:70px;float:right;cursor:pointer;color:#70A73B;border:1px solid #70A73B}
 	
 	
-	#menuesquerdo {float:left;width:250px;height:auto;border-right:3px double #d6d6d6}
-	#menuesquerdo ul {width:200px;height:auto;margin:30px 0 0 25px;float:left}
-	#menuesquerdo ul li {width:100%;height:30px;line-height:30px;list-style:none;margin: 0 0 5px 0;background:url(/otimolance/img/bgitem.jpg) repeat-x;border-radius:3px;box-shadow:#FFF 1px 1px 2px}
-	#menuesquerdo ul li.titulo {background:url(/otimolance/img/bgtitulo.jpg) repeat-x;color:#FFF;font-weight:bold}
-	#menuesquerdo ul li:hover {background:url(/otimolance/img/bgtitulo.jpg) repeat-x;}
-	#menuesquerdo ul li a {text-decoration:none;color:#FFF;width:200px;height:30px;display:block} 
-	#menuesquerdo ul li a span {float:left;margin:0 0 0 10px} 
+	#menuesquerdo {float:left;width:225px;height:auto;border-right:3px double #d6d6d6}
+	#menuesquerdo .logo {margin:20px 0 0 25px;float: left}
+	#menuesquerdo h1 {margin:15px 0 0 25px;font-size:13px;float: left;color:#012E41}
+	#menuesquerdo ul {width:200px;height:auto;margin:20px 0 0 25px;float:left}
+	#menuesquerdo ul li {width:100%;height:30px;line-height:30px;list-style:none;margin: 0 0 5px 0;background:#ededed;box-shadow:#FFF 1px 1px 2px}
+	#menuesquerdo ul li.titulo {background:#CCC;color:#012E41;font-weight:bold}
+	#menuesquerdo ul li:hover {background:#CCC}
+	#menuesquerdo ul li a {text-decoration:none;color:#012E41;width:200px;height:30px;display:block} 
+	#menuesquerdo ul li a span {float:left;margin:0 0 0 10px}
 	
 	
-	#conteudo {float:left;height:auto;margin:30px 0 0 30px;width:900px;}
+	#conteudo {float:left;height:auto;margin:30px 0 0 30px;width:1000px;}
 	#conteudo .titulo {margin: 0 0 25px 0}
 	#conteudo .titulo p {line-height:25px;height:25px;border:1px solid #d6d6d6;margin:5px 0 0 0;font-size:11px;color:#666}
 	#conteudo .titulo p a {color:#666}
