--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,3 +56,19 @@ body {width:960px;margin:auto}
 #menuesquerdo ul li:hover {background:#CCC}
 #menuesquerdo ul li a {text-decoration:none;color:#012E41;width:200px;height:30px;display:block} 
 #menuesquerdo ul li a span {float:left;margin:0 0 0 10px}
+
+#conteudoAdmin{   display: table;   float: right;    margin: 30px 0 0;    width: 700px;}
+#conteudoAdmin .formulario h2 {margin: 5px 0 0 0;font-size:14px;height:30px;line-height:30px;border-bottom:1px solid #666;width: 100%;float: left;clear: both}
+#conteudoAdmin .formulario form {width: 100%;float: left}
+#conteudoAdmin .formulario div.item {width:455px;}
+#conteudoAdmin .formulario div.itemDireita {float: right;width:400px;}
+#conteudoAdmin .formulario div.itemEsquerda {float: left;width:400px;}
+#conteudoAdmin .formulario div.acao {width:100%;text-align:right}
+#conteudoAdmin .formulario .input {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:450px;margin: 5px 0 15px 0}
+#conteudoAdmin .formulario .inputSmall {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:250px;margin: 5px 0 15px 0}
+#conteudoAdmin .formulario .textarea {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:450px;margin: 5px 0 15px 0;font-family:Verdana, Geneva, sans-serif;font-size:12px;}
+#conteudoAdmin .formulario .select {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:455px;margin: 5px 0 15px 0}
+#conteudoAdmin .formulario .selectSmall {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:250px;margin: 5px 0 15px 0}
+#conteudoAdmin .formulario .input:hover, #conteudo .formulario .textarea:hover, #conteudo .formulario .select:hover {border: 1px solid #999;}
+#conteudoAdmin .button {border: 1px solid #CCC;padding:4px;margin: 5px 0 15px 0;cursor:pointer}
+
