--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -39,6 +39,7 @@
 	#conteudo .formulario div.acao {width:100%;text-align:right}
 	#conteudo .formulario .input {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:450px;margin: 5px 0 15px 0}
         #conteudo .formulario .inputSmall {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:250px;margin: 5px 0 15px 0}
+        #conteudo .formulario .date {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:250px;margin: 5px 0 15px 0}
 	#conteudo .formulario .textarea {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:450px;margin: 5px 0 15px 0;font-family:Verdana, Geneva, sans-serif;font-size:12px;}
 	#conteudo .formulario .select {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:455px;margin: 5px 0 15px 0}
         #conteudo .formulario .selectSmall {border: 1px solid #CCC;padding:4px 2px 4px 2px;width:250px;margin: 5px 0 15px 0}
